# HandyBird

./: .gitignore  CMakeLists.txt  README.md
docs/: README.md
include/: BackgroundRemover.h  DataStorage.h  FaceDetector.h  FingerCount.h  SkinDetector.h  string_helper.hpp
src/: BackgroundRemover.cpp  FaceDetector.cpp  FingerCount.cpp  SkinDetector.cpp  main.cpp  string_helper.cpp
